--- a/index.html
+++ b/index.html
@@ -9,6 +9,69 @@
 
 </head>
 <body>
+
+<header>
+    <div class="head">
+        <img><link rel="stylesheet" href="./img/logo.svg"></img>
+        <nav class="nav-flex">
+            <div>Scarica</div>
+            <div>Perchè Discord</div>
+            <div>Nitro</div>
+            <div>Sicurezza</div>
+            <div>Asssistenza</div>
+        </nav>
+        <button class="button-accedi">accedi</button>
+    </div>
+        <br>
+    <div class="flex-column">
+        <h1>Il tuo posto per parlare</h1>
+        <p class="text">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale,
+            o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme,
+            Discsord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+        <div>
+            <button class="scarica">Scarica per Mac</button>
+            <button class="apri">Apri Discord nel tuo browser</button>
+        </div>
+    </div>
+</header>
+    <br>
+<main>
+    <div class="main-flex">
+        <img src="./img/item1.svg" alt="">
+        <div>
+            <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
+            <br>
+            <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo</p>
+        </div>
+    </div>
+    <div class="main-flex">
+        <div>
+            <h1>Dove trovarsi è facile</h1>
+            <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi instantaneamente senza dover chiamare</p>
+        </div>
+        <img src="./img/item2.svg" alt="">
+    </div>
+    <div class="main-flex">
+        <img src="./img/item3.svg" alt="">
+        <div>
+            <h1>Da pochi a un fandom</h1>
+            <p>Dai inizio a una community di qualsiasi diemnsione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
+        </div>
+    </div>
+
+    <div class="flex-column-final">
+        <h1>Tecnologia affidabile per tenersi in contatto</h1>
+        <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+        <img src="./img/item4-big.svg" alt="">
+        <h3 class="back-img">Pronto a iniziare la tua avventura?</h3>
+        <button class="button-scarica">Scarica per Mac</button>
+
+
+    </div>
+    
+</main>
+
+ 
     
 </body>
 </html>
